--- a/app/src/components/Footer/Footer.css
+++ b/app/src/components/Footer/Footer.css
@@ -17,6 +17,10 @@
   width: 300px;
 }
 
+.footer__right * .MuiSlider-root {
+  color: green
+}
+
 .footer__albumLogo {
   height: 60px;
   width: 60px;
